// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoaderControl Check loader control 1`] = `
Array [
  Object {
    "background-palette-color-general": 1,
    "background-palette-color-status-general": true,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
]
`;

exports[`LoaderControl Check loader control 2`] = `
Array [
  Object {
    "background-palette-color-general": 1,
    "background-palette-color-status-general": true,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "scroll",
    "background-image-clip-general": "border-box",
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-opacity-general": 1,
    "background-image-origin-general": "padding-box",
    "background-image-parallax-direction": "up",
    "background-image-parallax-speed": 4,
    "background-image-parallax-status": false,
    "background-image-position-general": "center center",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "no-repeat",
    "background-image-size-general": "auto",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "id": 2,
    "type": "image",
  },
]
`;

exports[`LoaderControl Check loader control 3`] = `
Array [
  Object {
    "background-palette-color-general": 1,
    "background-palette-color-status-general": true,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "scroll",
    "background-image-clip-general": "border-box",
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-opacity-general": 1,
    "background-image-origin-general": "padding-box",
    "background-image-parallax-direction": "up",
    "background-image-parallax-speed": 4,
    "background-image-parallax-status": false,
    "background-image-position-general": "center center",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "no-repeat",
    "background-image-size-general": "auto",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "id": 2,
    "type": "image",
  },
  Object {
    "background-video-loop": false,
    "background-video-opacity-general": 1,
    "background-video-playOnMobile-general": false,
    "background-video-reduce-border-general": false,
    "display-general": "block",
    "id": 3,
    "type": "video",
  },
]
`;

exports[`LoaderControl Check loader control 4`] = `
Array [
  Object {
    "background-palette-color-general": 1,
    "background-palette-color-status-general": true,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "scroll",
    "background-image-clip-general": "border-box",
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-opacity-general": 1,
    "background-image-origin-general": "padding-box",
    "background-image-parallax-direction": "up",
    "background-image-parallax-speed": 4,
    "background-image-parallax-status": false,
    "background-image-position-general": "center center",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "no-repeat",
    "background-image-size-general": "auto",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "id": 2,
    "type": "image",
  },
  Object {
    "background-video-loop": false,
    "background-video-opacity-general": 1,
    "background-video-playOnMobile-general": false,
    "background-video-reduce-border-general": false,
    "display-general": "block",
    "id": 3,
    "type": "video",
  },
  Object {
    "background-gradient-opacity-general": 1,
    "display-general": "block",
    "id": 4,
    "type": "gradient",
  },
]
`;

exports[`LoaderControl Check loader control 5`] = `
Array [
  Object {
    "background-palette-color-general": 1,
    "background-palette-color-status-general": true,
    "display-general": "block",
    "id": 1,
    "type": "color",
  },
  Object {
    "background-image-attachment-general": "scroll",
    "background-image-clip-general": "border-box",
    "background-image-height-general": 100,
    "background-image-height-unit-general": "%",
    "background-image-opacity-general": 1,
    "background-image-origin-general": "padding-box",
    "background-image-parallax-direction": "up",
    "background-image-parallax-speed": 4,
    "background-image-parallax-status": false,
    "background-image-position-general": "center center",
    "background-image-position-height-general": 0,
    "background-image-position-height-unit-general": "%",
    "background-image-position-width-general": 0,
    "background-image-position-width-unit-general": "%",
    "background-image-repeat-general": "no-repeat",
    "background-image-size-general": "auto",
    "background-image-width-general": 100,
    "background-image-width-unit-general": "%",
    "display-general": "block",
    "id": 2,
    "type": "image",
  },
  Object {
    "background-video-loop": false,
    "background-video-opacity-general": 1,
    "background-video-playOnMobile-general": false,
    "background-video-reduce-border-general": false,
    "display-general": "block",
    "id": 3,
    "type": "video",
  },
  Object {
    "background-gradient-opacity-general": 1,
    "display-general": "block",
    "id": 4,
    "type": "gradient",
  },
  Object {
    "background-palette-svg-color-general": 5,
    "background-palette-svg-color-status-general": true,
    "background-svg-position-bottom-general": 0,
    "background-svg-position-left-general": 0,
    "background-svg-position-right-general": 0,
    "background-svg-position-top-general": 0,
    "background-svg-position-unit-general": "%",
    "background-svg-size-general": 100,
    "background-svg-size-unit-general": "%",
    "background-svg-top-unit-general": "%",
    "display-general": "block",
    "id": 5,
    "type": "shape",
  },
]
`;
